completing complexity excercise

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -21,5 +21,8 @@
       "@fem/ui-toolbar": ["libs/ui-toolbar/src/index.ts"]
     }
   },
-  "exclude": ["node_modules", "tmp"]
+  "exclude": ["node_modules", "tmp"],
+  "angularCompilerOptions": {
+    "strictTemplates": true
+  }
 }
